# porkanoid

./: CMakeLists.txt  LICENSE.md
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/game/: CMakeLists.txt  main.cpp  porkanoid.xml
sources/libbase/: CMakeLists.txt
sources/libbase/include/pd/: app.hpp  context.hpp  stdpaths.hpp
sources/libbase/src/pd/: app.cpp  stdpaths.cpp
sources/libgame/: CMakeLists.txt
sources/libgame/include/pd/game/: app.hpp
sources/libgame/src/pd/game/: app.cpp
